# GCIMS

./: .gitignore  CMakeLists.txt  Date.h  Functions.h  final_data.json  main.cpp  parser.h
Backend/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CarAVL.h  Cars.h  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Functions.h  GCIMS_SETUP_SUMMARY.md  HashMatrix.h  HashTable.h  OLD_final_data.csv  README.md  dev.sh  final_data.csv  final_data.json  final_data2.json  main.cpp  parser.h  render.yaml
Backend - Copy/: .gitignore  CMakeLists.txt  CarAVL.h  CarTAVL.h  Cars.h  Date.h  Functions.h  HashMatrix.h  HashTable.h  OLD_final_data.csv  final_data.csv  main.cpp  parser.h
Frontend/: package.json
Frontend/Dashboard/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
Frontend/Dashboard/src/: middleware.ts
Frontend/Dashboard/src/app/: globals.css  layout.tsx  page.tsx
Frontend/Public Site/: .env.example  index.html  package-lock.json  package.json
Frontend/Public Site/src/: App.jsx  main.jsx
Frontend/Public Site/src/pages/: About.jsx  BlogDetails.jsx  CarDetails.jsx  CarListing.jsx  Contact.jsx  Home.jsx
Frontend/Public Site/src/routers/: Routers.jsx
Frontend/Public Site/src/styles/: car-item.css  contact.css  find-car-form.css  header.css
Frontend/src/: App.jsx
Frontend/src/assets/data/: carData.js
Frontend/src/pages/: About.jsx  Blog.jsx  BlogDetails.jsx  CarDetails.jsx  CarListing.jsx  Contact.jsx  Home.jsx  NotFound.jsx
Frontend/src/routers/: Routers.jsx
Frontend/src/styles/: contact.css  find-car-form.css
(+57 files in other folders)
